drag and drop table render

--- a/locales/pos_messages.properties
+++ b/locales/pos_messages.properties
@@ -343,7 +343,7 @@ label.pickupcodesize=Length of Pickup Number
 label.placefloor=Floor
 label.placeid=ID
 label.placename=Place
-label.placeposition=Position
+label.placeposition=Position:
 label.postal=PostCode
 label.price=Price
 label.pricetax=Price + Taxes
